--- a/works/mediatheque/accounts/templates/accounts/_base.html
+++ b/works/mediatheque/accounts/templates/accounts/_base.html
@@ -3,29 +3,33 @@
 {% block title %}Accueil Médiathèque{% endblock %}
 
 {% block page_header %}
-  <h1>Médiathèque - Projet (Django)</h1>
+  <h1>Médiathèque – Accueil</h1>
 {% endblock %}
 
 {% block nav %}
-<nav>
+<nav id="menu-mediatheque">
   <ul>
     <li><a href="{% url 'accounts:accueil' %}">Accueil Médiathèque</a></li>
     <li><a href="{% url 'bibliothecaire:accueil' %}">Espace Bibliothécaire</a></li>
     <li><a href="{% url 'consultation:accueil' %}">Espace Consultation</a></li>
 
     {% if user.is_authenticated %}
+      {% if user.is_staff or user.is_superuser %}
+        <li><a href="{% url 'admin:index' %}">Site d’administration</a></li>
+      {% endif %}
       <form action="{% url 'accounts:logout' %}" method="post" style="display:inline;">
         {% csrf_token %}
-        <button type="submit">
-            Déconnexion ({{ user.username }})
-        </button>
+        <button type="submit">Déconnexion ({{ user.username }})</button>
       </form>
     {% else %}
       <li><a href="{% url 'accounts:login' %}">Connexion</a></li>
-    {% endif %}  </ul>
+    {% endif %}
+  </ul>
 </nav>
 {% endblock %}
 
 {% block footer %}
 <p>&copy; Accueil – Médiathèque</p>
 {% endblock %}
+
+
